# SDL_project

./: .gitignore  CMakeLists.txt  game.cpp  game.h  main.cpp  ogl_h_func.cpp  ogl_h_func.h  project_plan  timer.cpp  timer.h
cmake_modules/: FindSDL2IMAGE.cmake  FindSDL2TTF.cmake
gui/: CMakeLists.txt  text_box.cpp  text_box.frag  text_box.h  text_box.vert
libs/libPSF/: CMakeLists.txt
res/: box.mtl  dome.mtl  dome1.mtl  dome1_col.mtl  dome_col.mtl  gate1.mtl  gate1_col.mtl  gate2.mtl  gate2_col.mtl  laser_shot1.mtl  plane1_col.mtl  plane1_v3.mtl  scraper.mtl  scraper1.mtl  scraper1_col.mtl  scraper_col.mtl  shot_hit.mtl  trail.mtl  turr1.mtl  turr1_col.mtl  turr2.mtl  turr2_col.mtl
res/fonts/: Tewi-normal-11.psf  tewi_code
world/: CMakeLists.txt  camera.cpp  camera.h  fullb.frag  game_obj.cpp  game_obj.h  hut_obj.cpp  hut_obj.h  level.cpp  level.h  mesh.cpp  mesh.h  model.frag  model.vert  ship_obj.cpp  ship_obj.h  terrain.cpp  terrain.frag  terrain.h  terrain.vert  trail_obj.cpp  trail_obj.h  turr_obj.cpp  turr_obj.h
